| Bug #43044 | NDBMT crash in TSMAN at end of LCP | ||
|---|---|---|---|
| Submitted: | 20 Feb 2009 7:47 | Modified: | 3 Mar 2009 17:52 |
| Reporter: | Pekka Nousiainen | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Disk Data | Severity: | S2 (Serious) |
| Version: | mysql-5.1.x-telco-6.4.x | OS: | Any |
| Assigned to: | Pekka Nousiainen | CPU Architecture: | Any |
[20 Feb 2009 7:47]
Pekka Nousiainen
[21 Feb 2009 19:51]
Pekka Nousiainen
tests based on two 12h laptop runs i'll just report my results, they are random and no match to QA tests clone: revision-id: jonas@mysql.com-20090219142840-v5q5ros6m6q2p7i5 crashes before patch-to-come (8): Error data: dbtup/DbtupDiskAlloc.cpp Error object: DBTUP (Line: 1065) 0x0000000e Error data: tsman.cpp Error object: TSMAN (Line: 1984) 0x0000000e Error data: dbtup/DbtupDiskAlloc.cpp Error object: DBTUP (Line: 816) 0x0000000e Error data: dbtup/DbtupDiskAlloc.cpp Error object: DBTUP (Line: 582) 0x0000000e Error data: Node 21 killed this node because GCP stop was detected Error object: NDBCNTR (Line: 256) 0x0000000e Error data: dbtup/DbtupDiskAlloc.cpp Error object: DBTUP (Line: 1102) 0x0000000e Error data: tsman.cpp Error object: TSMAN (Line: 1538) 0x0000000e Error data: suma/Suma.cpp Error object: SUMA (Line: 4106) 0x0000000e crashes after patch (3): above DBTUP crashes, lines 582, 1065, 816 So the patch-to-come does not fix bug#41398.
[22 Feb 2009 10:42]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/67106 2879 Pekka Nousiainen 2009-02-22 bug#43044 01_debug.diff small printout change modified: storage/ndb/src/kernel/blocks/lgman.cpp storage/ndb/src/kernel/blocks/tsman.cpp storage/ndb/src/kernel/blocks/tsman.hpp
[22 Feb 2009 10:43]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/67107 2880 Pekka Nousiainen 2009-02-22 bug#43044 02_mutex.diff mutex tsman END_LCP (and some others) modified: storage/ndb/src/kernel/blocks/tsman.cpp
[22 Feb 2009 10:46]
Bugs System
Pushed into 5.1.32-ndb-6.4.3 (revid:pekka@mysql.com-20090222104446-tgvyl3t5usbrg6c4) (version source revid:pekka@mysql.com-20090222104446-tgvyl3t5usbrg6c4) (merge vers: 5.1.32-ndb-6.4.3) (pib:6)
[3 Mar 2009 17:52]
Jon Stephens
Documented bugfix in the NDB-6.4.3 changelog as follows:
Repeated insert and delete operations on disk-based tables could
lead to failures in the NDB Transaction Manager (TSMAN kernel
block).
