bug#43044 01_debug.diff small printout change